# MultiScoper

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CI_SESSION_LOG.md  CLAUDE.md  CLAUDE.md.example  CMakeLists.txt  CMakePresets.json  GEMINI.md  README.md  analyze_raw_image.py  analyze_screenshot.py  build_output.txt  buildwarning2.txt  buildwarnings.txt  check_image.py  dd.md  run_all_tests.sh  run_e2e.sh  run_visual_tests.sh
.claude/agents/: animation-specialist.md  api-designer.md  architecture-guardian.md  code-reviewer.md  debugger.md  dsp-engineer.md  juce-ui-designer.md  opengl-shader-specialist.md  qa-engineer.md  render-specialist.md  technical-writer.md  ui-designer.md  ui-engineer.md
.claude/commands/: bootstrap-docs.md  ci-juce2.md  ci.md  code.md  codereview.md  debug.md  investigate.md  vibecheck.md
.github/: copilot-instructions.md
.github/workflows/: build_and_test.yml  copilot-auto-fix.yml
_codeql_build_dir/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  OscilTests[1]_include.cmake  cmake_install.cmake  juce_vst3_helper
cmake/: Sources.cmake  Tests.cmake
docs/: api.md  architecture.md  architecture.md.backup-20251202-212305  building.md  codebase_evaluation.md  deployment.md  development.md  e2e-test-harness-plan.md  e2e-test-plan-post-processing.md  e2e-testing.md  folder-structure.md  gpureview.md  gpureview2.md  new_features.md  phase2.md  plan-processing-mode-icons.md  plan-render-engine-fixes.md  plan-rendering-mode-toggle.md  plan-shader-rendering.md  prd.md  render-engine.md  review.md  shaders.md  test-element-ids.md  test_scenarios.md  testing-render-pipeline.md  testing.md  ui-component-library-plan.md  ui-control-inventory.md  ui-image-prompts.md
docs/ci_reports/: CI-20251206-001.md  bugfix_timing_controls.md
docs/meta/: styleguide.md
docs/plans/: code-review-fix-plan.md  plan-singleton-removal.md
docs/prd/: 001_persistence_afterglow.md  006_statistics_visualization.md  008_visual_preset_management.md  grid.md  new_features.md  pane-tooltip.md
docs/prompts/: ui-component-library-prompt.md  ui-shader-waveforms-prompt.md
include/: Oscil.h
include/core/: AudioCapturePool.h  AudioConfig.h  CaptureThread.h  DebugLogger.h  DecimatingCaptureBuffer.h  GlobalPreferences.h  HostInfo.h  IAudioDataProvider.h  IInstanceRegistry.h  InstanceRegistry.h  MemoryBudgetManager.h  OscilLog.h  OscilState.h  Oscillator.h  OscillatorStateManager.h  Pane.h  PerformanceConfig.h  PluginProcessor.h  RawCaptureBuffer.h  SeqLock.h  ServiceContext.h  SharedCaptureBuffer.h  Source.h  VisualPreset.h  VisualPresetManager.h  WaveformColorPalette.h  WindowLayout.h
include/dsp/: SignalProcessor.h  TimingConfig.h  TimingEngine.h
include/plugin/: HostCompatibility.h  OpenGLLifecycleManager.h  PluginEditor.h  PluginFactory.h  PluginProcessor.h
include/rendering/: Camera3D.h  EffectChain.h  FrameBudgetGuard.h  Framebuffer.h  FramebufferPool.h  GLErrorGuard.h  GPUCapabilities.h  GpuRenderCoordinator.h  GridRenderer.h  IEffectProvider.h  LightingConfig.h  OpenGLLifecycleManager.h  ParticleRenderer.h  PresetManager.h  RenderCommon.h  RenderEngine.h  ShaderRegistry.h  VisualConfiguration.h  WaveformGLRenderer.h  WaveformRenderState.h  WaveformShader.h
include/tools/: PerformanceProfiler.h  PluginEditor_Adapters.h
include/ui/: AddOscillatorDialog.h  ColorPickerComponent.h  OscillatorConfigPopup.h  OscillatorListComponent.h  OscillatorListItem.h  OscillatorListToolbar.h  OscillatorPanel.h  PaneComponent.h  PluginEditor.h  PluginTestServer.h  SegmentedButtonBar.h  SettingsDropdown.h  SidebarComponent.h  SourceItemComponent.h  SourceSelectorComponent.h  (+4 more)
scripts/: architecture_lint.py  comment_lint.py  e2e_test_lint.py  install-hooks.sh  ninja-wrapper  pre-commit  profile_performance.py  size_lint.py  source_registry_lint.py  test_ghost_all_scenarios.sh  test_ghost_automated.sh  test_ghost_image.sh  test_ghost_oscillator.sh  test_quality_lint.py  todo_lint.py
test_harness/: CMakeLists.txt
test_harness/include/: TestAudioGenerator.h  TestDAW.h  TestElementRegistry.h  TestHttpServer.h  TestLogCapture.h  TestMetrics.h  TestScreenshot.h  TestTrack.h  TestTransport.h  TestUIController.h  TestableComponent.h
test_harness/src/: Main.cpp  TestAudioGenerator.cpp  TestDAW.cpp  TestElementRegistry.cpp  TestHttpServer.cpp  TestHttpServerDiagnostic.cpp  TestHttpServerMetrics.cpp  TestHttpServerPanes.cpp  TestHttpServerState.cpp  TestHttpServerTransport.cpp  TestHttpServerUI.cpp  TestHttpServerUIKeyboard.cpp  TestHttpServerVerification.cpp  TestHttpServerWaveform.cpp  TestLogCapture.cpp  TestMetrics.cpp  TestScreenshot.cpp  TestScreenshotAnalysis.cpp  TestScreenshotMac.mm  TestTrack.cpp  TestTransport.cpp  TestUIController.cpp  TestUIControllerForms.cpp  TestUIControllerQueries.cpp  TestUIControllerSimulation.cpp
tests/: FrameBudgetGuardTest.cpp  OscilTestFixtures.h  OscilTestUtils.h  test_accordion_sections_e2e.cpp  test_adaptive_lod.cpp  test_add_oscillator_dialog.cpp  test_analysis_engine.cpp  test_animation_settings.cpp  test_animation_settings_persistence.cpp  test_animation_settings_presets.cpp  test_animation_settings_validation.cpp  test_audio_capture_pool.cpp  test_camera3d.cpp  test_camera3d_animation.cpp  test_camera3d_interaction.cpp  test_camera3d_math.cpp  test_capture_buffer_concurrent.cpp  test_capture_buffer_core.cpp  test_capture_buffer_integrity.cpp  test_capture_buffer_lifecycle.cpp  test_capture_buffer_metadata.cpp  test_capture_buffer_threading.cpp  test_capture_quality_config.cpp  test_capture_quality_config_edge.cpp  test_capture_thread.cpp  test_code_review_fixes.cpp  test_collapsible_sections_e2e.cpp  test_config_structs.cpp  test_coordinator_events.cpp  test_coordinator_lifecycle.cpp  test_coordinator_state.cpp  test_coordinators.cpp  test_decimating_capture_buffer.cpp  test_decimating_capture_buffer_concurrent.cpp  test_decimating_capture_buffer_edge.cpp  test_effect_chain.cpp  test_framebuffer_pool.cpp  test_global_preferences.cpp  test_instance_registry.cpp  test_instance_registry_crud.cpp  (+114 more)
(+610 files in other folders)
